Added fs-extra for file upload

--- a/public/app/components/home/home.html
+++ b/public/app/components/home/home.html
@@ -54,7 +54,7 @@
         <div class="errors" ng-repeat="error in errors">
             <div id="errorMessage" ng-if="error" class="alert alert-danger ">{{error}}</div>
         </div>
-        <a ng-click="facebookLogin()">Facebook</a>
+        <!-- <a ng-click="facebookLogin()">Facebook</a> -->
     </div>
     <div class="col-md-7" id="rightPanel">
       <div class="row">
