--- a/public/app/components/home/home.html
+++ b/public/app/components/home/home.html
@@ -61,7 +61,8 @@
         <div class="jumbotron">
           <div class="container">
             <img src="/app/assets/images/audiohackers2.png" id="audiohackersjumbo" class="img-rounded" alt="Audio Hackers Logo">
-            <h2>The Wave Generator is a tool to help engineers and audio nerds alike to understand the fundamentals of additive synthesis!</h2>
+            <h2>A Social Network for Audio Engineers</h2>
+            <h3>The Wave Generator is a tool to help engineers and audio nerds alike to understand the fundamentals of additive synthesis!</h3>
             <img src="/app/assets/images/waveGenLogo.png" class="img-rounded waveGenLogo" alt="Audio Hackers Wave Generator">
 
           </div>
