Cleaned up code

--- a/public/app/components/microphoneDb/microphoneDb.html
+++ b/public/app/components/microphoneDb/microphoneDb.html
@@ -39,7 +39,7 @@
     </div>
 
 
-    <!-- <div class="row">
+    <div class="row">
         <div class="col-md-4">
             <form ng-show="isAdmin()" id="micForm" name="micForm" ng-model="mic" ng-submit="postMicrophone()">
                 <div class="form-group">
@@ -94,7 +94,7 @@
         </div>
     </div>
 
- -->
+
 
 
     <!-- End Row -->
